[package]
name = "metronome_client"
version = "2.0.0"
authors = ["Antti Tönkyrä <daedalus@pingtimeout.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
metronome_lib = { path = "../metronome_lib" }
clap = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
single_value_channel = "*"