[package]
name = "metronome_lib"
version = "2.0.0"
authors = ["Antti Tönkyrä <daedalus@pingtimeout.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "*"
serde_derive = "*"
rmp = "*"
rmpv = "*"
rmp-serde = "*"
rmp-serialize = "*"
time = "*"